Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-10097

After HTTP framework disconnects, heartbeater idle-loops instead of being deleted.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 1.5.3, 1.6.2, 1.7.2, 1.8.1, 1.9.0
    • 1.10.0
    • master
    • None
    • 1

    Description

      In some cases, Master closes connection of HTTP framework without deleting the heartbeater:
      https://github.com/apache/mesos/blob/65e18bef2c5ff356ef74bac9aa79b128c5b186d9/src/master/master.cpp#L3323
      https://github.com/apache/mesos/blob/65e18bef2c5ff356ef74bac9aa79b128c5b186d9/src/master/master.cpp#L10910

      It can be argued that this does not constitute a leak, because old heartbeaters are deleted on reconnection/removal.

      However, this means that for each disconnected framework there is a ResponseHeartbeaterProcess that performs an idle loop.

      Attachments

        Issue Links

          Activity

            People

              asekretenko Andrei Sekretenko
              asekretenko Andrei Sekretenko
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: