Fixed HTTP framework disconnection/removal to terminate heartbeater.

This patch gets rid of idle-looping heartbeater processes
that previously could occur after HTTP framework disconnection
(see MESOS-10097).

Review: https://reviews.apache.org/r/72130